--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ before_install:
   - cd ..
   - git clone https://github.com/miszo/warsawjs-workshop-24-shopping-cart-api.git shopApi
   - cd shopApi
-  - npm ci
+  - npm install
   - npm start
   - cd ../warsawjs-workshop-24-shopping-cart
 language: node_js
