Added ampersand to npm start to detach task

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ before_install:
   - cd ..
   - git clone https://github.com/miszo/warsawjs-workshop-24-shopping-cart-api.git shopApi
   - cd shopApi
-  - npm install
-  - npm start
+  - npm i
+  - npm start &
   - cd ../warsawjs-workshop-24-shopping-cart
 language: node_js
 node_js:
